--- a/app/templates/processes/process/index.hbs
+++ b/app/templates/processes/process/index.hbs
@@ -171,11 +171,11 @@
             <AuButton
               @skin="secondary"
               {{on "click" this.openReplaceModal}}
-            >Vervang BPMN-bestand</AuButton>
+            >Vervang</AuButton>
           {{/if}}
           {{#if this.newestBpmnFile}}
             <AuButton {{on "click" this.openDownloadModal}}>
-              Download BPMN-bestand
+              Download
             </AuButton>
           {{/if}}
         </AuButtonGroup>
