--- a/app/templates/processes/process/index.hbs
+++ b/app/templates/processes/process/index.hbs
@@ -21,7 +21,7 @@
       <DataCard>
         <:header></:header>
         <:title>
-          Details
+          Algemene info
         </:title>
         <:card as |Card|>
           <Card.Columns>
@@ -108,7 +108,7 @@
         {{/if}}
       </:header>
       <:title>
-        Details
+        Algemene info
       </:title>
       <:card as |Card|>
         <Card.Columns>
@@ -358,24 +358,15 @@
       </div>
     </div>
     <div class="au-o-grid__item au-u-margin-top">
-      <div>
-        <div class="au-u-flex au-u-flex--between au-u-margin-bottom-small">
-          <AuHeading @level="2" @skin="3">Alle bestanden</AuHeading>
-          <AuButtonGroup>
-            {{#if this.canEdit}}
-              <AuButton>
-                Voeg toe
-              </AuButton>
-            {{/if}}
-          </AuButtonGroup>
-        </div>
-        <p class="au-u-margin-top-none">
-          <AuHelpText @skin="secondary">Verschillende bestanden kunnen een
-            proces betekenis geven. Alle bestanden gekoppeld aan het huidige
-            proces, worden hieronder verzameld, ongeacht hun bestandsformaat.
-            Enkel het meest recente BPMN-bestand wordt bovenaan de pagina
-            gevisualiseerd.</AuHelpText>
-        </p>
+      <div class="au-u-flex au-u-flex--between au-u-margin-bottom-small">
+        <AuHeading @level="2" @skin="3">Bijlagen</AuHeading>
+        <AuButtonGroup>
+          {{#if this.canEdit}}
+            <AuButton>
+              Voeg toe
+            </AuButton>
+          {{/if}}
+        </AuButtonGroup>
       </div>
       <div class="au-c-boxed-table au-u-margin-top-small">
         <AuDataTable
