--- a/app/templates/shared-processes/index.hbs
+++ b/app/templates/shared-processes/index.hbs
@@ -117,7 +117,7 @@
   <:title>Voeg proces toe</:title>
   <:body>
     <CustomFileUpload
-      @accept=".bpmn,.xml"
+      @accept=".bpmn"
       @title="BPMN-bestand selecteren"
       @helpTextDragDrop="Bestand wordt meteen verwerkt en toegevoegd aan bibliotheek na selectie"
       @createProcess={{this.createProcess}}
