Only suggest own processes when searching own processes

--- a/app/templates/shared-processes/index.hbs
+++ b/app/templates/shared-processes/index.hbs
@@ -12,6 +12,7 @@
               @id="filter-title"
               @selected={{this.title}}
               @onChange={{this.setTitle}}
+              @publisher={{this.currentSession.group.id}}
               class="grow"
             />
           </div>
