Track file download

--- a/app/templates/processes/process/index.hbs
+++ b/app/templates/processes/process/index.hbs
@@ -341,8 +341,9 @@
                           this.downloadFile
                           bpmnFile.id
                           bpmnFile.name
+                          bpmnFile.extension
+                          bpmnFile.extension
                           "text/xml"
-                          false
                         )
                       }}
                     />
@@ -405,8 +406,9 @@
                         this.downloadFile
                         attachment.id
                         attachment.name
+                        attachment.extension
+                        attachment.extension
                         "text/xml"
-                        false
                       )
                     }}
                   />
